syntax = "proto3";

import "RegionCustomConfig.proto";

message RegionSimpleInfo {
   string name = 1;
   string title = 2;
   string type = 3;
   string dispatch_url = 4;
   RegionCustomConfig region_custom_config = 5;
}
  