syntax = "proto3";

import "ServerLogType.proto";
import "ServerLogLevel.proto";

message ServerLogNotify {
   ServerLogType log_type = 1;
   ServerLogLevel log_level = 2;
   string server_log = 3;
}
  