syntax = "proto3";

import "ClientCustomConfig.proto";
import "RegionSimpleInfo.proto";

message QueryRegionListHttpRsp {
  uint32 retcode = 1;
  repeated RegionSimpleInfo region_list = 2;
  string client_custom_config = 3;
  ClientCustomConfig client_config = 4;
}